Fixed underline not showing

--- a/reactClient/components/HeaderNav/HeaderNav.module.css
+++ b/reactClient/components/HeaderNav/HeaderNav.module.css
@@ -45,6 +45,7 @@
     gap: 0.6em;
     align-items: center;
     margin-left: min(1vw, 2rem);
+    height: 100%; /*To allow search input's overflow to show*/
 }
 
 .SearchIcon {
@@ -62,6 +63,7 @@
 .SearchInput {
     flex-grow: 1;
     position: relative;
+    overflow: visible;
 }
 
 .SearchInput > input {
@@ -73,7 +75,7 @@
     font-weight: 600;
     outline: none;
     width: 100%;
-
+    overflow: visible; /*So that the underline shows up*/
 }
 
 .SearchInput > input::placeholder {
